[package]
authors = ['Parami Devs <info@parami.io>']
description = 'AD3 Advertisement Pallet'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-ad'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
parami-advertiser = { path = '../advertiser', default-features = false, optional = true }
parami-did = { path = '../did', default-features = false }
parami-nft = { path = '../nft', default-features = false }
parami-swap = { path = '../swap', default-features = false, optional = true }
parami-tag = { path = '../tag', default-features = false, optional = true }
parami-traits = { path = '../traits', default-features = false }

log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.0', optional = true }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.24' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
parami-primitives = { path = '../../primitives', default-features = false }

[dev-dependencies]
parami-ocw = { path = '../ocw' }

sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-uniques = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

[features]
default = ['std']

runtime-benchmarks = [
    'frame-benchmarking',
    'parami-advertiser',
    'parami-swap',
    'parami-tag',
]

std = [
    'parami-advertiser/std',
    'parami-did/std',
    'parami-nft/std',
    'parami-swap/std',
    'parami-tag/std',
    'parami-traits/std',
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
