[package]
name = "parami-airdrop"
version = "0.1.0"
authors = ["Parami Team <info@parami.io>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
parami-primitives = { version = "2.0.0", path = "../../primitives", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-keyring = { version = "3.0.0", optional = true }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }

#frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "pallet-balances/std",
    "sp-keyring",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
]
#runtime-benchmarks = [
#    "frame-benchmarking",
#    "frame-system/runtime-benchmarks",
#    "frame-support/runtime-benchmarks",
#]
