[package]
name = "parami-airdrop"
version = "0.1.0"
authors = ["Parami Team <info@parami.io>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
log = { version = "0.4.14", default-features = false }

# primitives
parami-primitives = { version = "2.0.0", path = "../../primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "log/std",
    "pallet-balances/std",
    "sp-keyring",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
]
#runtime-benchmarks = [
#    "frame-benchmarking",
#    "frame-system/runtime-benchmarks",
#    "frame-support/runtime-benchmarks",
#]
