[package]
authors = ['david@chainsafe.io', 'Parami Devs <info@parami.io>']
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only'
name = 'parami-assetmanager'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false}
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

[features]
default = ['std']

std = [
    'codec/std',
    'scale-info/std',

    'sp-runtime/std',
    'sp-runtime-interface/std',

    'frame-support/std',
    'frame-system/std',
    'pallet-assets/std',
]
