[package]
name = "parami-bridge"
version = "3.0.0"
authors = ["Parami Team <info@parami.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-balances ={ git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
]
