[package]
authors = ['david@chainsafe.io', 'Parami Devs <info@parami.io>']
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only'
name = 'parami-chainbridge'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
serde = { version = '1.0.0', optional = true }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.24' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking']

std = [
    'serde',

    'codec/std',
    'scale-info/std',

    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',

    'pallet-balances/std',
]

try-runtime = ['frame-support/try-runtime']
