[package]
authors = ['Parami Devs <info@parami.io>']
description = 'Parami Clockin Pallet'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-clockin'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
parami-did = { path = '../did', default-features = false }
parami-nft= { path = '../nft', default-features = false }
parami-traits= { path = '../traits', default-features = false }
parami-primitives = { path = '../../primitives', default-features = false }

serde = { version = '1.0.0', optional = true }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.24' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
log = { version = "0.4.14", default-features = false, optional = true }

[dev-dependencies]
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-uniques = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
parami-assetmanager= { path='../assetmanager' }
parami-ocw = { path='../ocw' }
parami-swap = { path='../swap' }
parami-tag = { path = '../tag', dafault-features = false }

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking']

std = [
    'parami-did/std',
    'parami-nft/std',
    'parami-traits/std',
    'parami-primitives/std',

    'serde',
    'log',

    'codec/std',
    'scale-info/std',

    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-runtime-interface/std',
    'sp-std/std',

    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
