[package]
authors = ['Parami Devs <info@parami.io>']
description = 'Parami Decentralized ID Pallet'
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-did'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.parami-did-utils]
default-features = false
path = 'utils'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies]
serde = { version = '1.0', optional = true }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dev-dependencies.pallet-balances]
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[dev-dependencies.sp-core]
git = 'https://github.com/parami-protocol/substrate.git'
branch = 'polkadot-v0.9.13'

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking']

std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'parami-did-utils/std',
    'scale-info/std',
    'serde',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]

try-runtime = ['frame-support/try-runtime']
