[package]
authors = ['Parami Devs <info@parami.io>']
description = 'AD3 Linker Pallet'
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-linker'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.parami-did]
default-features = false
path = '../did'
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies]
base58 = '0.2'
image = { version = '0.23', optional = true }
ripemd160 = { version = '0.9', optional = true }
serde = { version = '1.0', optional = true }
tracing = { version = '0.1', default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.num-traits]
version = '0.2'
default-features = false
features = ['libm']

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-runtime-interface]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dev-dependencies.libsecp256k1]
version = '0.6'

[features]
default = ['std']

runtime-benchmarks = [
    'frame-benchmarking',
    'parami-did',
]

std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'image',
    'parami-did/std',
    'ripemd160',
    'scale-info/std',
    'serde',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime-interface/std',
    'sp-runtime/std',
    'sp-std/std',
    'tracing/std',
]

try-runtime = ['frame-support/try-runtime']
