[package]
authors = ['Parami Devs <info@parami.io>']
description = 'AD3 Linker Pallet'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-linker'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies]
parami-did = { path = '../did', default-features = false }
parami-primitives = { path = '../../primitives', default-features = false }
parami-traits = { path = '../traits', default-features = false }

base58 = '0.2'
hex = { version = '0.4', default-features = false, optional = true }
image = { version = '0.23', optional = true }
num-traits = { version = '0.2', default-features = false, features = ['libm'] }
ripemd160 = { version = '0.9', optional = true }
serde = { version = '1.0', optional = true }
tracing = { version = '0.1', default-features = false }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.13' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

[dev-dependencies]
parami-tag = { path = '../tag' }

libsecp256k1 = '0.6'

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking', 'hex/alloc']

std = [
    'parami-did/std',
    'parami-primitives/std',
    'parami-traits/std',

    'hex/std',
    'image',
    'ripemd160',
    'serde',
    'tracing/std',

    'codec/std',
    'scale-info/std',

    'sp-core/std',
    'sp-io/std',
    'sp-runtime-interface/std',
    'sp-runtime/std',
    'sp-std/std',

    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
