[package]
authors = ['Parami Devs <info@parami.io>']
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-magic'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.parami-primitives]
default-features = false
path = '../../primitives'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies]
serde = { version = '1.0', optional = true }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dev-dependencies.frame-election-provider-support]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dev-dependencies.pallet-session]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dev-dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dev-dependencies.pallet-staking-reward-curve]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dev-dependencies.pallet-utility]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking']

std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'parami-primitives/std',
    'scale-info/std',
    'serde',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]

try-runtime = ['frame-support/try-runtime']
